--- a/pages/page10.html
+++ b/pages/page10.html
@@ -1,23 +1,22 @@
-<div class="book-content" style="text-align: center; font-family: cairo; line-height: 1.6;background-image: url('pics/wall.png'); background-size: 50%; background-repeat: no-repeat; background-position: center;">
-    <h2 style="font-weight: bold; color: #2c3e50;font-family: 'Cairo';">مبادرة زراعة 10 مليارات شجرة</h2>
+<div class="book-content" style="font-family: 'Cairo', sans-serif; line-height: 1.6; text-align: center; padding: 20px;">
+    <h2 style="font-weight: bold; color: #2c3e50; font-family: 'Cairo';">السعودية الخضراء وزراعة الأشجار</h2>
 
-    <p style="font-size: 18px; color: #34495e;text-align: right">
-        تأتي مبادرة "السعودية الخضراء" مع أهداف طموحة تسعى لتحقيقها عبر العديد من الشراكات الاستراتيجية مع مؤسسات حكومية، 
-        منظمات بيئية، وشركات متخصصة في مجالات الاستدامة. ضمن هذه المبادرة، تركز المملكة على زراعة 10 مليارات شجرة 
-        بهدف تعزيز المساحات الخضراء، مكافحة التصحر، وتحقيق توازن بيئي يدعم استدامة الموارد الطبيعية.
+    <p class="center-pic" style="position: relative; z-index: 2;">
+        <!-- الفيديو بدلاً من الصورة -->
+        <video width="350" height="230" controls>
+            <source src="pics/VID.mp4" type="video/mp4">
+        </video>
     </p>
 
-    <ul style="text-align: right; font-size: 18px; color: #34495e; padding-left: 20px; list-style-type: none;">
-        <li style="margin-bottom: 15px;"><strong>وزارة البيئة والمياه والزراعة</strong>: قيادة الجهود الوطنية للحفاظ على الموارد الطبيعية وتعزيز الأمن الغذائي عبر سياسات وتوجهات بيئية مستدامة</li>
-        <li style="margin-bottom: 15px;"><strong>أرامكو السعودية</strong>: الاستثمار في حلول الطاقة المتجددة وتقنيات احتجاز الكربون للتقليل من التأثيرات السلبية على البيئة</li>
-        <li style="margin-bottom: 15px;"><strong>سابك</strong>: تطوير تقنيات مبتكرة لدعم الاقتصاد الدائري وتقليل الفاقد من الموارد الطبيعية</li>
-    </ul>
-	
-    <div style="text-align: center; margin-top: 20px;">
-        <img src="https://example.com/green-tree-initiative.jpg" alt="Saudi Green Initiative - 10 Billion Trees" style="width: 80%; border-radius: 10px;">
-    </div>
+    <p style="font-size: 16px; color: #34495e; position: relative; z-index: 2; text-align: right;">
+        تسعى السعودية الخضراء إلى تحقيق بيئة مستدامة من خلال مبادرات ضخمة في مجال زراعة الأشجار
+    </p>
+
+    <p style="font-size: 16px; color: #34495e; position: relative; z-index: 2; text-align: right;">
+        من بين أبرز المبادرات التي تدعم هذه الرؤية، مبادرة **مدرسة عبدالرحمن بن القاسم** التي تهدف إلى نشر ثقافة الزراعة والحفاظ على البيئة بين الطلاب والمجتمع المحلي
+    </p>
 </div>
-<span class="page-number" style="font-size: 14px; color: #34495e; display: block; text-align: center; margin-top: 15px;">9</span>
+
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
