--- a/pages/page11.html
+++ b/pages/page11.html
@@ -7,7 +7,7 @@
         ومن بين الحلول التي تم تبنيها في المملكة: <strong>تحلية المياه</strong> و <strong>إعادة تدوير المياه</strong>
     </p>
 
-    <p style="font-size: 18px; color: #26660d;">
+    <p style="font-size: 18px; color: #34495e;">
         المملكة تركز على عدة إجراءات لضمان استدامة المياه والحفاظ على هذا المورد الحيوي. ومن أهم هذه الإجراءات
     </p>
 
@@ -17,7 +17,6 @@
     </ul>
 
 </div>
-<span class="page-number" style="font-size: 14px; color: #34495e; display: block; text-align: center; margin-top: 15px;">10</span>
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
