--- a/pages/page12.html
+++ b/pages/page12.html
@@ -7,7 +7,7 @@
         كما أن المشروع يركز على تطوير المدن لتصبح أكثر استدامة وصديقة للبيئة، مما يساهم في تحسين جودة الحياة على مختلف الأصعدة
     </p>
 
-    <p style="font-size: 18px; color: #26660d;text-align: right">
+    <p style="font-size: 18px; color: #34495e;text-align: right">
         تشمل المبادرة العديد من الإجراءات التي تهدف إلى رفع مستوى المعيشة وتعزيز الصحة العامة
     </p>
 
@@ -17,7 +17,6 @@
     </ul>
 
 </div>
-<span class="page-number" style="font-size: 14px; color: #34495e; display: block; text-align: center; margin-top: 15px;">11</span>
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
