--- a/pages/page13.html
+++ b/pages/page13.html
@@ -1,22 +1,19 @@
-<div class="book-content" style="text-align: center; font-family: cairo, sans-serif; line-height: 1.6; background-image: url('pics/wall.png'); background-size: 50%; background-repeat: no-repeat; background-position: center;">
+<div class="book-content" style="text-align: center; font-family: cairo, sans-serif; line-height: 1.6; background-size: 50%; background-repeat: no-repeat; background-position: center;">
     <h2 style="font-weight: bold; color: #2c3e50; font-family: 'Cairo';">دور الرياضة في تحقيق أهداف مبادرة السعودية الخضراء</h2>
+
+    <p class="center-pic" style="position: relative; z-index: 2;">
+        <img src="pics/IMG_2.jpg" style="width: 350px; height: 230px; object-fit: cover; border-radius: 10px;">
+    </p>
 
     <p style="font-size: 18px; color: #34495e; text-align: right;">
         تلعب الرياضة دورًا هامًا في تعزيز مفاهيم الاستدامة والمساهمة في تحقيق أهداف مبادرة السعودية الخضراء، حيث تسعى المملكة إلى دمج الرياضة في الأنشطة التي تعزز الوعي البيئي
     </p>
 
-    <p style="font-size: 18px; color: #26660d; text-align: right;">
-        العلاقة بين المجال الرياضي و السعودية الخضراء تظهر من خلال
+    <p style="font-size: 18px; color: #34495e; text-align: right;">
+        من خلال هذه المبادرة، يتم تشجيع الرياضات التي تتطلب التفاعل مع الطبيعة، مما يساهم الحفاظ على البيئة
     </p>
-
-    <ul style="text-align: right; font-size: 18px; color: #34495e;">
-        <li><strong>تنظيم فعاليات رياضية مستدامة</strong>: تصميم وتنفيذ الفعاليات الرياضية مع مراعاة تقليل الانبعاثات الكربونية</li>
-        <li><strong>تشجيع الأنشطة الرياضية في المساحات الخضراء</strong>: تعزيز ممارسة الرياضة في الحدائق والمناطق الطبيعية</li>
-        <li><strong>دعم الشراكات بين القطاعين الرياضي والبيئي</strong>: العمل على مشاريع مشتركة تجمع بين الأندية الرياضية والمؤسسات البيئية</li>
-    </ul>
 </div>
 
-<span class="page-number" style="font-size: 14px; color: #34495e; display: block; text-align: center; margin-top: 15px;">12</span>
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
