--- a/pages/page14.html
+++ b/pages/page14.html
@@ -1,4 +1,4 @@
-<div class="book-content" style="text-align: center; font-family: cairo, sans-serif; line-height: 1.6;background-image: url('pics/wall.png'); background-size: 50%; background-repeat: no-repeat; background-position: center;">
+<div class="book-content" style="text-align: center; font-family: cairo, sans-serif; line-height: 1.6; background-image: url('pics/wall.png'); background-size: 50%; background-repeat: no-repeat; background-position: center;">
     <h2 style="font-weight: bold; color: #2c3e50;font-family: 'Cairo';">شركاء مبادرة السعودية الخضراء</h2>
 
     <p style="font-size: 18px; color: #34495e;text-align: right">
@@ -7,7 +7,7 @@
         مما يعزز من دور المملكة في مجال الاستدامة والحفاظ على البيئة.
     </p>
 
-    <p style="font-size: 18px; color: #26660d;text-align: center">
+    <p style="font-size: 18px; color: #34495e;text-align: center">
         من أبرز الشركاء في هذه المبادرة
     </p>
 
@@ -17,7 +17,6 @@
     </ul>
 
 </div>
-<span class="page-number" style="font-size: 14px; color: #34495e; display: block; text-align: center; margin-top: 15px;">13</span>
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
