--- a/pages/page15.html
+++ b/pages/page15.html
@@ -1,25 +1,23 @@
-<div class="book-content" style="text-align: center; font-family: cairo, sans-serif; line-height: 1.6;background-image: url('pics/wall.png'); background-size: 50%; background-repeat: no-repeat; background-position: center;">
+<div class="book-content" style="text-align: center; font-family: cairo, sans-serif; line-height: 1.6; background-size: 50%; background-repeat: no-repeat; background-position: center;">
     <h2 style="font-weight: bold; color: #2c3e50;font-family: 'Cairo';">التقنيات المستخدمة في السعودية الخضراء</h2>
+
+    <p class="center-pic" style="position: relative; z-index: 2;">
+        <img src="pics/174661.jpg" style="width: 350px; height: 230px; object-fit: cover; border-radius: 10px;">
+    </p>
 
     <p style="font-size: 18px; color: #34495e;text-align: right">
         تسعى مبادرة "السعودية الخضراء" إلى استخدام أحدث التقنيات للمساهمة في تحقيق أهدافها البيئية. من خلال تبني تقنيات متطورة
-        يمكن للمملكة الحد من الآثار البيئية السلبية، وتقليل الانبعاثات الكربونية، وتعزيز الاستدامة على المدى الطويل
     </p>
 
-    <p style="font-size: 18px; color: #26660d;text-align: center">
+    <p style="font-size: 18px; color: #34495e;text-align: center">
         من أبرز التقنيات المستخدمة في المبادرة
     </p>
 
     <ul style="text-align: right; font-size: 18px; color: #34495e;">
-        <li><strong>الطاقة المتجددة</strong>: تستخدم المملكة تقنيات الطاقة الشمسية وطاقة الرياح لتوليد الكهرباء، وتعتبر هذه التقنيات من الحلول الأساسية لتقليل الاعتماد على الوقود الأحفوري</li>
-        <li><strong>تقنيات تحلية المياه</strong>: من خلال استخدام أنظمة تحلية المياه المتطورة، تتمكن المملكة من تأمين موارد المياه النظيفة في ظل قلة المصادر الطبيعية للمياه العذبة</li>
-        <li><strong>تدوير المياه</strong>: تقوم المملكة بتنفيذ مشاريع لإعادة تدوير المياه المهدرة، خاصة في مجالات الزراعة.</li>
+        <li><strong>الطاقة المتجددة</strong> تستخدم المملكة تقنيات الطاقة الشمسية وطاقة الرياح لتوليد الكهرباء، وتعتبر هذه التقنيات من الحلول الأساسية</li>
     </ul>
-
-
   </div>
 </div>
-<span class="page-number" style="font-size: 14px; color: #34495e; display: block; text-align: center; margin-top: 15px;">14</span>
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
