--- a/pages/page5.html
+++ b/pages/page5.html
@@ -2,7 +2,7 @@
     <h2 style="font-weight: bold; color: #2c3e50; font-family: 'Cairo';">تاريخ شبه الجزيرة العربية</h2>
 
     <p class="center-pic" style="position: relative; z-index: 2;">
-        <img src="pics/desert.jpg" alt="تاريخ شبه الجزيرة العربية" style="width:350px; height:230px;">
+        <img src="pics/desert.jpg" alt="تاريخ شبه الجزيرة العربية" style="width: 350px; height: 230px; object-fit: cover; border-radius: 10px;">
     </p>
 
     <p style="font-size: 16px; color: #34495e; position: relative; z-index: 2; text-align: right;">
@@ -13,7 +13,6 @@
         ولكن مع مرور الزمن، بدأت التغيرات المناخية تظهر، مغيرة ملامح هذه الأرض الخصبة
     </p>
 </div>
-<span class="page-number" style="font-size: 14px; color: #34495e; display: block; text-align: center; margin-top: 15px;">4</span>
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
