--- a/pages/page7.html
+++ b/pages/page7.html
@@ -1,25 +1,16 @@
-<div class="book-content" style="font-family: 'Cairo', sans-serif; line-height: 1.6; text-align: center; padding: 20px;">
+<div class="book-content" style="font-family: 'Cairo', sans-serif; line-height: 1.6; text-align: right; padding: 20px; position: relative;">
 
-    <h2 style="font-weight: bold; color: #2c3e50;font-family: 'Cairo';">رؤية المملكة</h2>
-    
-    <p style="font-size: 16px; color: #34495e; text-align: right;">
-        تُجسد <strong>رؤية السعودية الخضراء</strong> طموح المملكة نحو تحقيق التوازن بين التنمية الاقتصادية وحماية البيئة. تهدف هذه المبادرة الطموحة إلى تحسين جودة الحياة لجميع سكان المملكة عبر تعزيز الاستدامة البيئية، وتقليل الانبعاثات الكربونية، وزيادة الغطاء النباتي
-    </p>
-
-    <p style="font-size: 16px; color: #26660d; text-align: right;">
-        تسعى الرؤية إلى تحويل المملكة إلى نموذج عالمي في مجال الاستدامة البيئية من خلال مبادرات مبتكرة تشمل زراعة <strong>10 مليارات شجرة</strong> وتقليل الانبعاثات بنسبة <strong>60%</strong>. هذه الجهود تُعد جزءًا من التزام المملكة بمواجهة التحديات البيئية العالمية
-    </p>
-
+   
     <p style="font-size: 16px; color: #34495e;">
-        <strong>الأهداف الرئيسية لرؤية السعودية الخضراء:</strong>
-        <ul style="text-align: left; margin: 0 auto; display: inline-block; text-align: right;">
-            <li style="font-size: 16px; color: #34495e;">زيادة استخدام مصادر الطاقة المتجددة وتقليل الاعتماد على الوقود الأحفوري</li>
-            <li style="font-size: 16px; color: #34495e;">مكافحة التصحر وتعزيز التنوع البيئي عبر زراعة ملايين الأشجار</li>
-        </ul>
+        تسعى <strong>رؤية السعودية الخضراء</strong> إلى تحويل المملكة إلى نموذج عالمي في مجال الاستدامة البيئية من خلال مبادرات مبتكرة وتقليل الانبعاثات بنسبة <strong>60%</strong> هذه الجهود تُعد جزءًا من التزام المملكة بمواجهة التحديات البيئية العالمية
     </p>
-</div>
-<span class="page-number" style="font-size: 14px; color: #34495e; display: block; text-align: center; margin-top: 15px;">6</span>
+    
+    <p style="font-size: 16px; color: #34495e;">
+        تشمل هذه الرؤية أيضًا تعزيز وعي المجتمع بأهمية حماية البيئة واستدامتها، إلى جانب تطوير البنية التحتية الداعمة لاستخدام مصادر الطاقة المتجددة
+    </p>
 
-<style>
-    @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
-</style>
+     <!-- صورة لهذه الصفحة فقط -->
+     <img src="pics/Main-2_00061.webp " style="width: 350px; height: 230px; object-fit: cover; border-radius: 10px;">
+
+</div>
+
