--- a/pages/page9.html
+++ b/pages/page9.html
@@ -1,4 +1,4 @@
-<div class="book-content" style="font-family: cairo, sans-serif; line-height: 1.6; text-align: center; padding: 20px;">
+<div class="book-content" style="font-family: cairo, sans-serif; line-height: 1.6; text-align: center; padding: 20px;  background-image: url('pics/wall.png'); background-size: 50%; background-repeat: no-repeat; background-position: center;">
     <div class="responsibility" style="margin-bottom: 10px;">
         <p class="icon-text" style="font-size: 14px; color: #34495e;">
             <strong style="font-weight: bold; color: #2c3e50;font-family: 'Cairo';">:🌱 الاستدامة أولاً</strong><br>
@@ -41,7 +41,6 @@
     </div>
 </div>
 
-<span class="page-number" style="font-size: 14px; color: #34495e; display: block; text-align: center; margin-top: 15px;">8</span>
 
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap');
