--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             width: 240px;
             padding: 20px;
             background: linear-gradient(145deg, rgba(0, 0, 0, 0.8), rgba(40, 40, 40, 0.9));
-            color: #fff;
+            color: #664949;
             border-radius: 15px;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
             font-family: Arial, sans-serif;
@@ -73,6 +73,30 @@
             color: #ffcc00;
             margin-right: 5px;
         }
+
+        .navigation-buttons {
+            position: fixed;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            z-index: 5;
+        }
+
+        .navigation-buttons button {
+            background-color: #4CAF50;
+            color: rgb(255, 247, 247);
+            border: none;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+            margin: 0 10px;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+        }
+
+        .navigation-buttons button:hover {
+            background-color: #5c945f;
+        }
     </style>
 </head>
 <body class="hidden">
@@ -98,12 +122,18 @@
             <div class="own-size"></div>
             <div class="own-size even"></div>
             <div class="hard fixed back-side p17"> <div class="depth"></div> </div>
-            <div class="hard p18"></div>
+            <div class="hard p19"></div>
         </div>
     </div>
-    <div id="slider-bar" class="turnjs-slider">
+    <div id="slider-bar" class="turnjs-slide">
         <div id="slider"></div>
     </div>
+</div>
+
+<!-- أزرار التنقل -->
+<div class="navigation-buttons">
+    <button id="prevBtn">السابق</button>
+    <button id="nextBtn">التالي</button>
 </div>
 
 <script type="text/javascript">
@@ -145,7 +175,6 @@
                 data.scrollPage = undefined;
                 data.scrollTimer = undefined;
             }, 1000);
-
         });
 
         $("#slider").slider({
@@ -297,6 +326,15 @@
         $('#slider').slider('option', 'max', numberOfViews(flipbook));
         flipbook.addClass('animated');
         $('#canvas').css({ visibility: '' });
+
+        // ربط الأزرار بوظائف التنقل
+        $('#prevBtn').click(function() {
+            $('.sj-book').turn('previous');
+        });
+
+        $('#nextBtn').click(function() {
+            $('.sj-book').turn('next');
+        });
     }
 
     $('#canvas').css({ visibility: 'hidden' });
@@ -308,16 +346,7 @@
         both: ['js/steve-jobs.js', 'css/jquery.ui.css', 'css/steve-jobs.css'],
         complete: loadApp
     });
-
 </script>
 
 </body>
 </html>
-
-    
-
-
-
-
-
- 
