--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            flex-wrap: wrap;
+            box-sizing: border-box;
         }
 
         .controls {
@@ -75,17 +77,39 @@
             transform: scale(1.1);
         }
 
-        @media (max-width: 768px) {
+        @media (max-width: 1024px) {
             #canvas {
                 padding: 10px;
+            }
+
+            .controls {
+                gap: 8px;
+            }
+
+            .controls button {
+                width: 45px;
+                height: 45px;
+                font-size: 18px;
+            }
+        }
+
+        @media (max-width: 768px) {
+            .controls button {
+                width: 40px;
+                height: 40px;
+                font-size: 16px;
             }
         }
 
         @media (max-width: 480px) {
             .controls button {
-                width: 40px;
-                height: 40px;
-                font-size: 16px;
+                width: 35px;
+                height: 35px;
+                font-size: 14px;
+            }
+
+            .controls {
+                bottom: 15px;
             }
         }
     </style>
