--- a/index.html
+++ b/index.html
@@ -13,9 +13,11 @@
             padding: 0;
             overflow: hidden;
             position: relative;
-            transition: all 0.3s ease; /* التأثير السلس للتبديل بين الألوان */
+            transition: all 0.3s ease;
             color: #000;
             font-family: Arial, sans-serif;
+            height: 100%;
+            width: 100%;
         }
 
         body {
@@ -23,7 +25,10 @@
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            direction: rtl; /* فتح الكتاب من اليمين لليسار */
+            direction: rtl;
+            height: 100%;
+            margin: 0;
+            width: 100%;
         }
 
         .overlay {
@@ -40,29 +45,40 @@
         #canvas {
             position: relative;
             z-index: 2;
+            height: 100%;
+            width: 100%;
         }
 
         .navigation-buttons {
             position: fixed;
-            bottom: 20px;
+            bottom: 10%;
             left: 50%;
             transform: translateX(-50%);
             z-index: 5;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
         }
 
         .navigation-buttons button {
-            background-color: rgba(0, 0, 255, 0.7); /* اللون الأزرق */
+            background-color: rgba(255, 255, 255, 0.7);
             color: transparent;
             border: none;
-            padding: 15px;
-            margin: 5px;
+            padding: 20px;
             border-radius: 50%;
             cursor: pointer;
-            font-size: 20px;
+            font-size: 24px;
+            width: 60px;
+            height: 60px;
+            transition: background-color 0.3s ease;
         }
 
         .navigation-buttons button:hover {
-            background-color: rgba(0, 0, 255, 0.9); /* التفاعل مع زر التبديل */
+            background-color: rgba(255, 255, 255, 1);
+        }
+
+        .navigation-buttons button:focus {
+            outline: none;
         }
 
         .dark-theme {
@@ -83,44 +99,76 @@
         .zoom-controls {
             position: fixed;
             top: 50%;
-            right: 20px;
+            right: 10px;
             z-index: 5;
             transform: translateY(-50%);
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
         }
 
         .zoom-controls button {
-            background-color: rgba(0, 0, 255, 0.7); /* الأزرق */
+            background-color: rgba(255, 255, 255, 0.7);
             color: transparent;
             border: none;
-            padding: 15px;
+            padding: 20px;
             margin: 5px;
             border-radius: 50%;
             cursor: pointer;
-            font-size: 20px;
-            display: block; /* ترتيب عمودي */
+            font-size: 24px;
+            width: 60px;
+            height: 60px;
+            transition: background-color 0.3s ease;
         }
 
         .zoom-controls button:hover {
-            background-color: rgba(0, 0, 255, 0.9);
+            background-color: rgba(255, 255, 255, 1);
         }
 
-        /* إضافة أيقونات لتغيير اللون والتكبير والتصغير */
         .icon-dark-mode::before {
             content: "🌙"; /* رمز للقمر (للوضع الداكن) */
-            font-size: 20px;
-            color: white; /* تغيير لون الأيقونة إلى الأبيض */
+            font-size: 24px;
+            color: black;
         }
 
         .icon-zoom-in::before {
             content: "+"; /* رمز الزائد للتقريب */
-            font-size: 20px;
-            color: white; /* تغيير لون الأيقونة إلى الأبيض */
+            font-size: 24px;
+            color: black;
         }
 
         .icon-zoom-out::before {
             content: "-"; /* رمز الناقص للتبعيد */
-            font-size: 20px;
-            color: white; /* تغيير لون الأيقونة إلى الأبيض */
+            font-size: 24px;
+            color: black;
+        }
+
+        /* الأسهم لتصفح الكتاب */
+        .icon-left::before {
+            content: "←"; /* سهم لليسار */
+            font-size: 24px;
+            color: blue;
+        }
+
+        .icon-right::before {
+            content: "→"; /* سهم لليمين */
+            font-size: 24px;
+            color: blue;
+        }
+
+        /* تنسيق للأزرار في الأجهزة المحمولة */
+        @media (max-width: 768px) {
+            .navigation-buttons button {
+                width: 80px;
+                height: 80px;
+                font-size: 28px;
+            }
+
+            .zoom-controls button {
+                width: 80px;
+                height: 80px;
+                font-size: 28px;
+            }
         }
     </style>
 </head>
@@ -145,8 +193,8 @@
 
     <!-- أزرار التنقل -->
     <div class="navigation-buttons">
-        <button id="prevPage">◀</button>
-        <button id="nextPage">▶</button>
+        <button id="prevPage" class="icon-left"></button>
+        <button id="nextPage" class="icon-right"></button>
         <button id="toggleTheme" class="icon-dark-mode"></button>
     </div>
 
@@ -263,7 +311,7 @@
                 gradients: true,
                 duration: 1000,
                 pages: 18,
-                rtl: true, /* جعل الكتاب يفتح من اليمين لليسار */
+                rtl: true,
                 when: {
                     turning: function (e, page, view) {
                         var book = $(this),
@@ -316,9 +364,11 @@
 
                         updateDepth(book);
 
-                        $('#slider').slider('value', getViewNumber(book, page));
+                        setTimeout(function () {
+                            $('#slider').slider('value', getViewNumber(book, page));
+                        }, 1);
 
-                        book.turn('center');
+                        moveBar(false);
                     },
 
                     start: function (e, pageObj) {
@@ -374,6 +424,14 @@
                 $('body').toggleClass('dark-theme');
                 $('html').toggleClass('dark-theme');
                 $('.sj-book').toggleClass('dark-theme');
+                // جعل الكتاب يملأ الصفحة بالكامل بعد التبديل
+                if ($('body').hasClass('dark-theme')) {
+                    $('body').css('background-color', '#121212');
+                    $('html').css('height', '100%');
+                } else {
+                    $('body').css('background-color', 'transparent');
+                    $('html').css('height', 'auto');
+                }
             });
 
             // إضافة أزرار التكبير والتصغير
