--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
             border-radius: 50%;
             cursor: pointer;
             font-size: 24px;
-            width: 60px;
-            height: 60px;
+            width: 80px;
+            height: 80px;
             transition: background-color 0.3s ease;
         }
 
@@ -87,12 +87,12 @@
         }
 
         .dark-theme .sj-book {
-            background-color: #333 !important;
+            background-color: #000000 !important;
             color: white !important;
         }
 
         .dark-theme .navigation-buttons button {
-            background-color: rgba(255, 255, 255, 0.7) !important;
+            background-color: rgba(255, 255, 255, 255) !important;
             color: black !important;
         }
 
@@ -108,17 +108,17 @@
         }
 
         .zoom-controls button {
-            background-color: rgba(255, 255, 255, 0.7);
+            background-color: rgba(165, 165, 165, 0.7);
             color: transparent;
             border: none;
             padding: 20px;
             margin: 5px;
             border-radius: 50%;
             cursor: pointer;
-            font-size: 24px;
-            width: 60px;
-            height: 60px;
-            transition: background-color 0.3s ease;
+            font-size: 28px;
+            width: 80px;
+            height: 80px;
+            transition: background-color 78.3s ease;
         }
 
         .zoom-controls button:hover {
@@ -127,32 +127,32 @@
 
         .icon-dark-mode::before {
             content: "🌙"; /* رمز للقمر (للوضع الداكن) */
-            font-size: 24px;
-            color: black;
+            font-size: 28px;
+            color: rgb(0, 0, 0);
         }
 
         .icon-zoom-in::before {
             content: "+"; /* رمز الزائد للتقريب */
-            font-size: 24px;
+            font-size: 28px;
             color: black;
         }
 
         .icon-zoom-out::before {
             content: "-"; /* رمز الناقص للتبعيد */
-            font-size: 24px;
+            font-size: 28px;
             color: black;
         }
 
         /* الأسهم لتصفح الكتاب */
         .icon-left::before {
             content: "←"; /* سهم لليسار */
-            font-size: 24px;
+            font-size: 28px;
             color: blue;
         }
 
         .icon-right::before {
             content: "→"; /* سهم لليمين */
-            font-size: 24px;
+            font-size: 28px;
             color: blue;
         }
 
