--- a/index.html
+++ b/index.html
@@ -1,183 +1,154 @@
 <!doctype html>
-<html lang="ar">
-<head> 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" src="../../extras/jquery.min.1.7.js"></script>
     <script type="text/javascript" src="../../extras/jquery-ui-1.8.20.custom.min.js"></script>
     <script type="text/javascript" src="../../extras/jquery.mousewheel.min.js"></script>
     <script type="text/javascript" src="../../extras/modernizr.2.5.3.min.js"></script>
     <script type="text/javascript" src="../../lib/hash.js"></script>
     <style>
-        /* التأكد من تطبيق التغييرات على الصفحة بالكامل */
-        html, body {
+        body {
             margin: 0;
             padding: 0;
-            overflow: hidden;
-            position: relative;
-            transition: all 0.3s ease;
-            color: #000;
-            font-family: Arial, sans-serif;
-            height: 100%;
-            width: 100%;
-        }
-
-        body {
+            background-color: white;
             background-image: url('pics/newsletter_bg.jpg');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
-            direction: rtl;
-            height: 100%;
-            margin: 0;
-            width: 100%;
-        }
-
-        .overlay {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgb(255, 255, 255);
-            z-index: 1;
-            pointer-events: none;
+            transition: background-color 0.5s ease;
         }
 
         #canvas {
             position: relative;
-            z-index: 2;
-            height: 100%;
             width: 100%;
-        }
-
-        .navigation-buttons {
-            position: fixed;
-            bottom: 10%;
-            left: 50%;
-            transform: translateX(-50%);
-            z-index: 5;
+            height: 100vh;
             display: flex;
             justify-content: center;
-            gap: 20px;
+            align-items: center;
+            margin-top: -20px;
         }
 
-        .navigation-buttons button {
-            background-color: rgba(255, 255, 255, 0.7);
-            color: transparent;
+        .sj-book {
+            max-width: 100%;
+            max-height: 100%;
+            transition: transform 0.3s ease-in-out;
+        }
+
+        .controls {
+            position: fixed;
+            bottom: -10px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: flex;
+            gap: 10px;
+            z-index: 10;
+        }
+
+        .controls button {
+            width: 50px;
+            height: 50px;
             border: none;
-            padding: 20px;
             border-radius: 50%;
-            cursor: pointer;
+            background-color: #333;
+            color: white;
             font-size: 24px;
-            width: 80px;
-            height: 80px;
-            transition: background-color 0.3s ease;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            cursor: pointer;
         }
 
-        .navigation-buttons button:hover {
-            background-color: rgba(255, 255, 255, 1);
+        .controls button:hover {
+            background-color: #555;
         }
 
-        .navigation-buttons button:focus {
-            outline: none;
-        }
-
-        .dark-theme {
-            background-color: #121212 !important;
-            color: white !important;
-        }
-
-        .dark-theme .sj-book {
-            background-color: #000000 !important;
-            color: white !important;
-        }
-
-        .dark-theme .navigation-buttons button {
-            background-color: rgba(255, 255, 255, 255) !important;
-            color: black !important;
-        }
-
-        .zoom-controls {
+        iframe {
+            display: none;
             position: fixed;
             top: 50%;
-            right: 10px;
-            z-index: 5;
-            transform: translateY(-50%);
-            display: flex;
-            flex-direction: column;
-            gap: 10px;
-        }
-
-        .zoom-controls button {
-            background-color: rgba(165, 165, 165, 0.7);
-            color: transparent;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 640px;
+            height: 480px;
             border: none;
-            padding: 20px;
-            margin: 5px;
+            z-index: 100;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        iframe.active {
+            display: block;
+        }
+
+        .eye-button {
+            display: none;
+            position: fixed;
+            top: 50%;
+            right: 20px;
+            transform: translateY(-50%);
+            width: 50px;
+            height: 50px;
+            background-color: rgba(0, 0, 0, 0.5);
+            color: white;
+            font-size: 24px;
             border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             cursor: pointer;
-            font-size: 28px;
-            width: 80px;
-            height: 80px;
-            transition: background-color 78.3s ease;
+            z-index: 10;
         }
 
-        .zoom-controls button:hover {
-            background-color: rgba(255, 255, 255, 1);
+        .eye-button:hover {
+            background-color: rgba(0, 0, 0, 0.8);
         }
 
-        .icon-dark-mode::before {
-            content: "🌙"; /* رمز للقمر (للوضع الداكن) */
-            font-size: 28px;
-            color: rgb(0, 0, 0);
+        .instructions {
+            position: fixed;
+            left: 20px;
+            top: 50%;
+            transform: translateY(-50%);
+            width: 240px;
+            padding: 20px;
+            background: linear-gradient(145deg, rgba(0, 0, 0, 0.8), rgba(40, 40, 40, 0.9));
+            color: #fff;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.5);
+            font-family: Arial, sans-serif;
+            font-size: 14px;
+            z-index: 3;
+            text-align: center;
         }
 
-        .icon-zoom-in::before {
-            content: "+"; /* رمز الزائد للتقريب */
-            font-size: 28px;
-            color: black;
+        .instructions h3 {
+            margin-top: 0;
+            font-size: 18px;
+            font-weight: bold;
+            color: #ffcc00;
         }
 
-        .icon-zoom-out::before {
-            content: "-"; /* رمز الناقص للتبعيد */
-            font-size: 28px;
-            color: black;
+        .instructions ul {
+            padding: 0;
+            margin: 10px 0 0 0;
+            list-style-type: none;
         }
 
-        /* الأسهم لتصفح الكتاب */
-        .icon-left::before {
-            content: "←"; /* سهم لليسار */
-            font-size: 28px;
-            color: blue;
+        .instructions ul li {
+            margin-bottom: 12px;
         }
 
-        .icon-right::before {
-            content: "→"; /* سهم لليمين */
-            font-size: 28px;
-            color: blue;
-        }
-
-        /* تنسيق للأزرار في الأجهزة المحمولة */
-        @media (max-width: 768px) {
-            .navigation-buttons button {
-                width: 80px;
-                height: 80px;
-                font-size: 28px;
-            }
-
-            .zoom-controls button {
-                width: 80px;
-                height: 80px;
-                font-size: 28px;
-            }
+        .instructions ul li:before {
+            content: "✔ ";
+            color: #ffcc00;
+            margin-right: 5px;
         }
     </style>
 </head>
-<body class="hidden">
-    <div class="overlay"></div>
-
+<body>
     <div id="canvas">
         <div id="book-zoom">
-            <div class="sj-book">
+            <div class="sj-book" style="direction: rtl;">
                 <div depth="5" class="hard"> <div class="side"></div> </div>
                 <div depth="5" class="hard front-side"> <div class="depth"></div> </div>
                 <div class="own-size"></div>
@@ -186,25 +157,24 @@
                 <div class="hard p18"></div>
             </div>
         </div>
-        <div id="slider-bar" class="turnjs-slider">
-            <div id="slider"></div>
-        </div>
     </div>
 
-    <!-- أزرار التنقل -->
-    <div class="navigation-buttons">
-        <button id="prevPage" class="icon-left"></button>
-        <button id="nextPage" class="icon-right"></button>
-        <button id="toggleTheme" class="icon-dark-mode"></button>
+    <div class="controls">
+        <button id="prev-page">&#x25C0;</button>
+        <button id="next-page">&#x25B6;</button>
+        <button id="zoom-in">+</button>
+        <button id="zoom-out">-</button>
+        <button id="toggle-theme">&#x1F4A7;</button>
+        <button id="single-page">&#x1F441;</button>
+        <button id="toggle-form">تقييم</button>
     </div>
 
-    <!-- أزرار التكبير والتصغير بشكل عمودي -->
-    <div class="zoom-controls">
-        <button id="zoomIn" class="icon-zoom-in"></button>
-        <button id="zoomOut" class="icon-zoom-out"></button>
-    </div>
+    <iframe id="feedback-form" src="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAa__RgmXVJUQUpYTlBQQzgyWVBNQU9MWkNKN0tRWkM4Vi4u&embed=true"></iframe>
 
-    <script type="text/javascript">
+    <div class="eye-button" id="eye-button">&#128065;</div>
+
+    <script>
+        // إلغاء فتح النموذج تلقائيًا عند تحميل الصفحة
         function loadApp() {
             var flipbook = $('.sj-book');
 
@@ -249,7 +219,6 @@
             $("#slider").slider({
                 min: 1,
                 max: 100,
-
                 start: function (event, ui) {
                     if (!window._thumbPreview) {
                         _thumbPreview = $('<div />', { 'class': 'thumbnail' }).html('<div></div>');
@@ -311,7 +280,7 @@
                 gradients: true,
                 duration: 1000,
                 pages: 18,
-                rtl: true,
+                direction: 'rtl',
                 when: {
                     turning: function (e, page, view) {
                         var book = $(this),
@@ -353,6 +322,16 @@
                             $('.sj-book .p17').removeClass('fixed');
 
                         Hash.go('page/' + page).update();
+
+                        // إظهار / إخفاء زر العين بناءً على الصفحة
+                        const eyeButton = document.getElementById('eye-button');
+                        if ([1, 2, 8, 9].includes(page)) {
+                            eyeButton.style.display = 'none';
+                        } else if (page > 3 && page < 8) {
+                            eyeButton.style.display = 'flex';
+                        } else {
+                            eyeButton.style.display = 'none';
+                        }
                     },
 
                     turned: function (e, page, view) {
@@ -368,23 +347,7 @@
                             $('#slider').slider('value', getViewNumber(book, page));
                         }, 1);
 
-                        moveBar(false);
-                    },
-
-                    start: function (e, pageObj) {
-                        moveBar(true);
-                    },
-
-                    end: function (e, pageObj) {
-                        var book = $(this);
-
-                        updateDepth(book);
-
-                        setTimeout(function () {
-                            $('#slider').slider('value', getViewNumber(book));
-                        }, 1);
-
-                        moveBar(false);
+                        book.turn('center');
                     },
 
                     missing: function (e, pages) {
@@ -410,42 +373,37 @@
             complete: loadApp
         });
 
-        // أزرار التنقل
-        $(document).ready(function() {
-            $('#prevPage').click(function() {
-                $('.sj-book').turn('previous');
-            });
+        document.getElementById('toggle-theme').addEventListener('click', function () {
+            document.body.style.backgroundColor = document.body.style.backgroundColor === 'black' ? 'white' : 'black';
+        });
 
-            $('#nextPage').click(function() {
-                $('.sj-book').turn('next');
-            });
+        document.getElementById('toggle-form').addEventListener('click', function () {
+            const form = document.getElementById('feedback-form');
+            form.classList.toggle('active');
+        });
 
-            $('#toggleTheme').click(function() {
-                $('body').toggleClass('dark-theme');
-                $('html').toggleClass('dark-theme');
-                $('.sj-book').toggleClass('dark-theme');
-                // جعل الكتاب يملأ الصفحة بالكامل بعد التبديل
-                if ($('body').hasClass('dark-theme')) {
-                    $('body').css('background-color', '#121212');
-                    $('html').css('height', '100%');
-                } else {
-                    $('body').css('background-color', 'transparent');
-                    $('html').css('height', 'auto');
-                }
-            });
+        document.getElementById('zoom-in').addEventListener('click', function () {
+            const book = document.querySelector('.sj-book');
+            book.style.transform = 'scale(1.2)';
+        });
 
-            // إضافة أزرار التكبير والتصغير
-            $('#zoomIn').click(function() {
-                var currentZoom = $('#canvas').css('transform');
-                var zoomFactor = parseFloat(currentZoom.split(',')[0].replace('matrix(', ''));
-                $('#canvas').css('transform', 'scale(' + (zoomFactor + 0.1) + ')');
-            });
+        document.getElementById('zoom-out').addEventListener('click', function () {
+            const book = document.querySelector('.sj-book');
+            book.style.transform = 'scale(1)';
+        });
 
-            $('#zoomOut').click(function() {
-                var currentZoom = $('#canvas').css('transform');
-                var zoomFactor = parseFloat(currentZoom.split(',')[0].replace('matrix(', ''));
-                $('#canvas').css('transform', 'scale(' + (zoomFactor - 0.1) + ')');
-            });
+        document.getElementById('prev-page').addEventListener('click', function () {
+            $('.sj-book').turn('previous');
+        });
+
+        document.getElementById('next-page').addEventListener('click', function () {
+            $('.sj-book').turn('next');
+        });
+
+        document.getElementById('single-page').addEventListener('click', function () {
+            const flipbook = $('.sj-book');
+            const isSingle = flipbook.turn('display') === 'single';
+            flipbook.turn('display', isSingle ? 'double' : 'single');
         });
     </script>
 </body>
