--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </div>
 
     <script type="text/javascript">
-        let zoomLevel = 0.6; // تم تصغير الكتاب بنسبة 40%
+        let zoomLevel = 0.75; // تم تعيين الزوم ليكون 75% بشكل افتراضي
         let singlePageView = false;
         let isDragging = false;
         let startX, startY, initialX, initialY;
